# sibsutis

./: .gitignore
2-3course/aivmo/lab1/: matr3.txt  matr4.txt
2-3course/aivmo/lab2/: matr01.txt  matr05.txt  matr09.txt
2-3course/android/lab5/: settings.gradle
2-3course/avs/lab3/: CMakeLists.txt
2-3course/avs/lab4/: CMakeLists.txt
2-3course/avs/lab5/: main.cpp
2-3course/avs/lab6/: CMakeLists.txt  main.c
2-3course/cuda/: lab01.cu  lab04.cu  lab07.cu  lab08-2.cu
2-3course/evm/reports/: my_report.docx
2-3course/flp/lab4/: swish.pl
2-3course/oop/course/: report.docx  tree.py
2-3course/oop/tasks/: Lab_5.html
2-3course/os/lab3/: from_lecture2.c
2-3course/practice/src/: set.c
2-3course/saod/course/: 16.cpp  23.cpp  27.cpp  29.cpp  30.cpp  33.cpp  38.cpp  39.cpp  40.cpp  48.cpp  ivan.cpp  michael.cpp
2-3course/saod/labs/c++/: CMakeLists.txt  haffman.cpp  lab_7.cpp  lab_9.cpp  tree.h
2-3course/saod/reports/: misha_report.doc
2-3course/vich-math/labs/: 2.cpp  7.cpp  big_nums.cpp  gauss.cpp
2-3course/visual/lab1/: mainwindow.cpp  mainwindow.ui
2-3course/visual/lab2/: inputdialog_samsonov_matafonov.h
2-3course/visual/lab3/: lab3.pro  sdiprogram_samsonov_matafonov.cpp
2-3course/visual/lab6/: mainwindow.h
4course/databases/lab4/: task3.sql  task4.sql  task6.sql
4course/databases/lab5/: lab5_1.php  lab5_2.php  lab5_3.php  lab5_7.php
4course/databases/lab6/: lab6_2.php  lab6_3.php
4course/databases/lab7/: lab7_1.php  lab7_2.php  lab7_3.php  lab7_4.php  lab7_5.php
4course/databases/lab8/: lab8_1.html  lab8_1.php  lab8_2.php  lab8_3.html  lab8_3.php  lab8_5.php
4course/databases/lab9/: lab9_1.php  lab9_2.html  lab9_2.php  lab9_3.php  lab9_4.php
4course/graphical_information/: .gitignore  Cargo.toml  README.md
4course/graphical_information/labs/: Cargo.toml
4course/graphical_information/rgz/: main.py
4course/graphical_information/src/: lib.rs
4course/inf_protection/course/: client.py  server.py
4course/inf_protection/crypto/: __init__.py
4course/inf_protection/lab2/: elgamal_file.py  rsa_file.py  shamir_example.py  shamir_file.py  vernam_file.py
4course/inf_protection/lab3/: elgamal.py  gost.py  rsa.py
4course/inf_protection/lab4/: poker.py
4course/inf_protection/lab5/: vote.py
4course/inf_protection/test/: test_crypto.py
4course/information_theory/: gen.py  lab1.py  lab2.py  lab3.py  lab4-5.py  lab4.py  lib.py
4course/modern_programming_tecs/other_labs/: CMakeLists.txt  main.cpp
4course/modern_programming_tecs/other_labs/lab0/: lab0_3.h
4course/modern_programming_tecs/other_labs/lab1/: TFrac.h  TestTFrac.cpp  TestUFrac.cpp  UFrac.h
4course/modern_programming_tecs/other_labs/lab10/: TMonomial.cpp  TMonomial.h  TMonomial_Test.cpp  TPoly.cpp  TPoly.h  TPoly_Test.cpp
4course/modern_programming_tecs/other_labs/lab2/: TComplex.h  TestTComplex.cpp
4course/modern_programming_tecs/other_labs/lab3/: TPNumber.h  TestTPNumber.cpp
4course/modern_programming_tecs/other_labs/lab4/: TestTPNumEditor.cpp
4course/modern_programming_tecs/other_labs/lab5/: TFracEditor.h
4course/modern_programming_tecs/other_labs/lab6/: TComplexEditor.cpp  TestTComplexEditor.cpp
4course/modern_programming_tecs/other_labs/lab7/: TMemory.h  TestTMemory.cpp
4course/modern_programming_tecs/other_labs/lab8/: TProc.h  TProc_Test.cpp
4course/modern_programming_tecs/other_labs/lab9/: TSet.h  TSet_Test.cpp
4course/network_software/: CMakeLists.txt
4course/network_software/lab1/: client.c  server.c
4course/network_software/lab2/: client.c  server.c
4course/network_software/lab3/: client.c  server.c
4course/network_software/lab4/: server.c  tcp_client.c  udp_client.c
aivmo/course work/: matr01.txt  task2.py
aivmo/lab1/: hw_matr.txt  lab1.py  matr2.txt
aivmo/lab2/: lab2.py  matr06.txt  matr08.txt  matr3.txt  matr4.txt
aivmo/lab3/: CMakeLists.txt
aivmo/lab4/: lab4.py
android/lab2/: settings.gradle
android/lab4/: settings.gradle
avs/lab1/: pcinfo.sh
avs/lab3/: main.c
course2-3/cuda/: CMakeLists.txt  lab06.cu  lab08-1.cu
course2-3/cuda/course_work/: cublas.cu  cuda.cu  trust.cu
course2-3/os/: lab1.cpp
course2-3/os/lab3/: main.c
course2-3/sis/: CMakeLists.txt  sis.docx
course4/databases/: lab2.sql  lab3.sql
course4/inf_protection/: lab1.3.py  lab1.py
course4/theory_of_pl/: graphical_tree.py  lab1.py
cuda/: CMakeLists.txt  data.txt  lab02.cu  lab03.cu  lab06-2.cu  lab1.cu  results.txt
cuda/lab2/: lab2.cu
evm/reports/: report_sus.docx
flp/: lab2_3.lisp
flp/lab3/: lab3_1.lisp  lab3_3.lisp
oop/course/: main.py
oop/max_course/: CMakeLists.txt  string.cpp
oop/tasks/: Lab_4.html  Lab_6.html  Lab_7.html
os/: CMakeLists.txt  lab2.cpp
os/lab3/: a.out  from_lecture1.c  from_lecture3.c
practice/: CMakeLists.txt
practice/test/: main.c
saod/course/: 18.cpp  27.cpp  28.cpp  29.cpp  35.cpp  40.cpp  45.cpp  50.cpp  CMakeLists.txt  anna.cpp  diman.cpp  kirill.cpp  sasha.cpp
saod/labs/c++/: .cpp  CMakeLists.txt  GTree.h  fano.cpp  lab_2.cpp  lab_3.cpp  lab_6.cpp  mur.cpp
saod/reports/: diman_report.doc  kirill.doc  nikita_report.docx
sis/: main.c
vich-math/labs/: 1.cpp  5.cpp
visual/lab1/: auth.h  auth.ui
visual/lab2/: inputdialog_samsonov_matafonov.cpp  lab2.pro  mainwindow_samsonov_matafonov.h  startdialog_samsonov_matafonov.cpp  startdialog_samsonov_matafonov.h
visual/lab3/: docwindow_samsonov_matafonov.cpp  docwindow_samsonov_matafonov.h  main.cpp  sdiprogram_samsonov_matafonov.h
visual/lab6/: mainwindow.cpp  mainwindow.ui  samsonov_matafonov.cpp  samsonov_matafonov.h  samsonov_matafonov.pro  samsonov_matafonov.ui
(+159 files in other folders)
