cmake_minimum_required(VERSION 3.12)
project(saod_course)

set(CMAKE_CXX_STANDARD 17)

add_executable(4 4.cpp)
add_executable(16 16.cpp)
add_executable(18 18.cpp)
add_executable(23 23.cpp)
add_executable(28 28.cpp)
add_executable(30 30.cpp)
add_executable(33 33.cpp)
add_executable(35 35.cpp)
add_executable(38 38.cpp)
add_executable(39 39.cpp)
add_executable(50 50.cpp)
add_executable(anna anna.cpp)
add_executable(diman diman.cpp)
add_executable(ivan ivan.cpp)
add_executable(kirill kirill.cpp)
add_executable(michael michael.cpp)
add_executable(my my.cpp)
add_executable(sasha sasha.cpp)
add_executable(48 48.cpp)
