cmake_minimum_required(VERSION 3.17)
project(MPT)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_executable(lab0_3 lab0/test_lab0_3.cpp)
add_executable(lab1 lab1/TestTFrac.cpp)
add_executable(lab2 lab2/TestTComplex.cpp)
add_executable(lab3 lab3/TestTPNumber.cpp lab3/TPNumber.cpp)
add_executable(lab4 lab4/TestTPNumEditor.cpp lab4/TPNumEditor.cpp)
add_executable(lab5 lab5/TestTFracEditor.cpp lab5/TFracEditor.cpp)
add_executable(lab6 lab6/TestTComplexEditor.cpp lab6/TComplexEditor.cpp)
add_executable(lab7 lab7/TestTMemory.cpp lab7/TMemory.h lab1/TFrac.h lab5/TFracEditor.cpp lab3/TPNumber.cpp)
add_executable(lab8 lab8/TProc_Test.cpp lab8/TProc.h lab1/TFrac.h lab3/TPNumber.cpp lab5/TFracEditor.cpp)
add_executable(lab9 lab9/TSet_Test.cpp lab9/TSet.h)
add_executable(lab10.1 lab10/TMonomial_Test.cpp lab10/TMonomial.cpp)
add_executable(lab10.2 lab10/TPoly_Test.cpp lab10/TPoly.cpp lab10/TMonomial.cpp)
add_executable(main main.cpp lab5/TFracEditor.cpp lab4/TPNumEditor.cpp)
